--- a/home.html
+++ b/home.html
@@ -137,7 +137,7 @@ PRIDAR Chatbot | A chatbot to help software engineers meet the requirements of t
 <div class="ttr_headershape01">
 <div class="html_content">
   <p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;">
-    <span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgb(0,203,203,1);">PRIDAR</span><span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgba(255,255,255);"> Chatbot</span></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><br style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgba(255,101,1,1);" /></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><span style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgb(250, 246, 246);">To get the most out of your Agency, learn more about the latest features.</span></p></div>
+    <span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgb(0,203,203,1);">PRIDAR</span><span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgba(255,255,255);"> Chatbot</span></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><br style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgba(255,101,1,1);" /></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><span style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgb(250, 246, 246);">A chatbot to help software engineers meet the requirements of the NHS</span></p></div>
 </div>
 </header>
 
