--- a/about-us.html
+++ b/about-us.html
@@ -149,7 +149,7 @@ $(window).load(function() {
 <div style="clear:both;"></div>
 <div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
 </div>
-
+</div>
 <div class="html_content"><p style="margin:0.36em 0.36em 0.36em 0em;text-align:Center;"><span style="font-family:'Roboto','Segoe UI';font-size:2.143em;color:rgba(52,52,52,1);">How We Work</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
