--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>
-New Page
+Appendix
 </title>
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
@@ -95,10 +95,10 @@ $(window).load(function() {
          </li>
                <!-- <li class="ttr_menu_items_parent dropdown"><a href="services.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Services</a>
       <hr class ="horiz_separator"/>
-      </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="gallery.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
-      <hr class ="horiz_separator"/>
       </li> -->
+      <li class="ttr_menu_items_parent dropdown"><a href="appendix.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Appendix</a>
+      <hr class ="horiz_separator"/>
+      </li>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
       <hr class ="horiz_separator"/>
       </li> -->
@@ -138,7 +138,12 @@ $(window).load(function() {
 <div class="post_column col-lg-6 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Gallery_html_column10">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.48em 0em 0.48em 0em;text-align:Center;font-weight:700;font-size:1.333em;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.79em 0em;"><span><img class="ttr_uniform" src="images/78.jpg" style="max-width:1280px;max-height:853px;" /></span></span><span style="font-family:'Roboto','Times New Roman';font-weight:400;font-size:1.429em;color:rgba(78,78,78,1);">Branding Mock Up</span></p><p style="margin:0.48em 0em 0.48em 0em;text-align:Center;font-size:1.143em;"><span style="font-family:'Open Sans','Times New Roman';font-size:1.071em;color:rgba(157,157,157,1);">Category : Mock Ups</span></p><p style="margin:0.48em 0em 0.48em 0em;text-align:Center;font-size:1.143em;"><br style="font-family:'Open Sans','Times New Roman';font-size:1.071em;color:rgba(157,157,157,1);" /></p></div>
+<div class="html_content"><a href="blog.html">
+   <p style="margin:0.48em 0em 0.48em 0em;text-align:Center;font-weight:700;font-size:1.333em;">
+      <span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 1.79em 0em;">
+         <span><img src="images/blog.png"></span></span></p>
+      <p><span style="font-family:'Roboto','Times New Roman';font-weight:400;font-size:1.429em;color:rgba(78,78,78,1);">Development Blog</span></p>
+</a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
