--- a/appendix.html
+++ b/appendix.html
@@ -96,9 +96,9 @@ $(window).load(function() {
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="services.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Services</a>
       <hr class ="horiz_separator"/>
       </li> -->
-      <!-- <li class="ttr_menu_items_parent dropdown"><a href="gallery.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="appendix.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Appendix</a>
       <hr class ="horiz_separator"/>
-      </li> -->
+      </li>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
       <hr class ="horiz_separator"/>
       </li> -->
@@ -107,13 +107,15 @@ $(window).load(function() {
 </div>
 </div>
 </nav>
+
+
 <header id="ttr_header">
 <div id="ttr_header_inner">
 <div class="ttr_headershape01">
 <div class="html_content"><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgba(255,255,255,1);">Thanks for choosing </span><span style="font-family:'Ubuntu','Arial';font-size:4.286em;color:rgba(0,203,203,1);">Agency</span></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><br style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgba(255,101,1,1);" /></p><p style="margin:0.36em 0em 0.36em 1.43em;text-align:Center;"><span style="font-family:'Ubuntu','Arial';font-size:1.143em;color:rgba(157,157,157,1);">To get the most out of your Agency, learn more about the latest features.</span></p></div>
 </div>
 <div class="ttr_headershape02">
-<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Open Sans','Arial';font-size:2.857em;color:rgba(255,255,255,1);">Service</span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Open Sans','Arial';font-size:2.857em;color:rgba(255,255,255,1);">Appendix</span></p></div>
 </div>
 </div>
 </header>
@@ -125,30 +127,15 @@ $(window).load(function() {
 <div class="ttr_Services_html_row0 row">
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_Services_html_column00">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);">Welcome to Agency Services</span></p><p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;"><br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" /><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgba(78,78,78,1);">Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
+<div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);">Documents and Manuals</span></p><p class="text" style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;"><br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" /><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgba(78,78,78,1);">__________________________________________________________</span></p></div>
+
 </div>
 </div>
 <div class="ttr_Services_html_row1 row">
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Services_html_column10">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/72.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service1</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div style="clear:both;"></div>
-</div>
-</div>
-<div class="clearfix visible-xs-block">
-</div>
-<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
-<div class="ttr_Services_html_column11">
-<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/73.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service2</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/72.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">User Manual</span></p></a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -158,17 +145,28 @@ $(window).load(function() {
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Services_html_column12">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/74.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service3</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/74.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Deployment Manual</span></p></a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
 </div>
+<div class="clearfix visible-xs-block">
+</div>
+<div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
+<div class="ttr_Services_html_column11">
+<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/blog2.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Development Blog</span></p></a></div>
+<div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
+<div style="clear:both;"></div>
+</div>
+</div>
+
 <div class="clearfix visible-lg-block visible-xs-block">
 </div>
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Services_html_column13">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/75.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service4</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/75.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Legal Statement</span></p></a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -178,7 +176,7 @@ $(window).load(function() {
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Services_html_column14">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/76.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service5</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/76.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">EULA</span></p></a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -188,7 +186,7 @@ $(window).load(function() {
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_Services_html_column15">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/77.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">Service6</span></p><p style="margin:1.43em 0em 0em 0em;text-align:Center;line-height:1.76056338028169;"><span style="font-family:'Open Sans','Arial';color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, test link adipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem.</span></p></div>
+<div class="html_content"><a href="blog.html" class="appendixbutton"><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span class="ttr_image" style="float:none;display:block;text-align:center;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" src="images/77.png" style="max-width:64px;max-height:64px;" /></span></span><br style="font-family:'Open Sans','Arial';font-weight:700;font-size:1.429em;color:rgba(78,78,78,1);" /></p><p style="margin:0.14em 0em 0em 0em;text-align:Center;"><span style="font-family:'Roboto','Arial';font-size:1.429em;color:rgba(78,78,78,1);">CC License</span></p></a></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -200,6 +198,7 @@ $(window).load(function() {
 </div>
 </div>
 <div style="clear:both">
+</div>
 </div>
 </div>
 </div>
