--- a/implementation.html
+++ b/implementation.html
@@ -72,33 +72,39 @@ $(window).load(function() {
 </div>
 <div class="menu-center collapse navbar-collapse">
    <ul class="ttr_menu_items nav navbar-nav navbar-right">
-      <li class="ttr_menu_items_parent dropdown active"><a href="home.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Home</a>
-      <hr class ="horiz_separator"/>
+      <li class="ttr_menu_items_parent dropdown active"><a href="home.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon" ></span>Home</a>
+        
+        <hr class ="horiz_separator"/>
+
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="requirements.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Requirements</a>
+      
+      <li class="ttr_menu_items_parent dropdown"><a href="requirements.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Reqs.</a>
          <hr class ="horiz_separator"/>
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="HCI.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>HCI</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="UI.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>HCI</a>
          <hr class ="horiz_separator"/>
       </li>
+      <li class="ttr_menu_items_parent dropdown"><a href="research.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Research</a>
+        <hr class ="horiz_separator"/>
+     </li>
       <li class="ttr_menu_items_parent dropdown"><a href="design.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Design</a>
          <hr class ="horiz_separator"/>
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="implementation.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Implementation</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="implementation.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Impl.</a>
          <hr class ="horiz_separator"/>
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>About Us</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="testing.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Testing</a>
+        <hr class ="horiz_separator"/>
+     </li>
+      <li class="ttr_menu_items_parent dropdown"><a href="evaluation.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Eval.</a>
       <hr class ="horiz_separator"/>
       </li>
-      <li class="ttr_menu_items_parent dropdown"><a href="blog.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Blog</a>
-         <hr class ="horiz_separator"/>
-         </li>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="services.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Services</a>
       <hr class ="horiz_separator"/>
       </li> -->
-      <!-- <li class="ttr_menu_items_parent dropdown"><a href="gallery.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
+      <li class="ttr_menu_items_parent dropdown"><a href="appendix.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Appendix</a>
       <hr class ="horiz_separator"/>
-      </li> -->
+      </li>
       <!-- <li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
       <hr class ="horiz_separator"/>
       </li> -->
