--- a/design.html
+++ b/design.html
@@ -261,7 +261,7 @@ $(window).load(function() {
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_About-Us_html_column60">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Roboto','Segoe UI';font-size:2.143em;color:rgba(52,52,52,1);">Our News &amp; Evevnts</span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Roboto','Segoe UI';font-size:2.143em;color:rgba(52,52,52,1);">Our News &amp; Events</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
