--- a/research.html
+++ b/research.html
@@ -16,7 +16,7 @@
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>
-Requirements
+Research
 </title>
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
@@ -125,7 +125,7 @@ $(window).load(function() {
 
 
 <div class="ttr_headershape02">
-<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Open Sans','Arial';font-size:2.857em;color:rgba(255,255,255,1);">Requirements</span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Open Sans','Arial';font-size:2.857em;color:rgba(255,255,255,1);">Research</span></p></div>
 </div>
 </div>
 </header>
