--- a/blog.html
+++ b/blog.html
@@ -365,14 +365,9 @@ height: auto;
 </style> -->
 
 
-
-
-
-<div id="ttr_page" class="container"></div>
-
 <div class="ag-timeline-block">
   <div class="ag-timeline_title-box">
-    <div class="ag-timeline_tagline">Timeline</div>
+    <!-- <div class="ag-timeline_tagline">Timeline</div> -->
     <div class="ag-timeline_title">Monthly Timeline</div>
   </div>
   <section class="ag-section">
