--- a/home.html
+++ b/home.html
@@ -1056,30 +1056,7 @@ Designed With TemplateToaster
 </footer> -->
 
 <style>
-  .footerIcons{
-    width: 20px;
-    height: auto;
-  }
-  .column {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
+ 
 </style>
 <footer id="ttr_footer">
    <div id="ttr_footer_inner">
@@ -1090,9 +1067,12 @@ Designed With TemplateToaster
   <div class="margin_collapsetop"></div>
   <div class="html_content"><h4 style="margin:16px 0px 0px 0px;line-height:2.02em;"><span style="font-weight:900;font-size:1.158em;color:rgba(243,243,243,1);">Site Info</span></h4><p style="line-height:1.93em;"><span style="font-size:0.933em;color:rgba(203,203,203,1);">This is the website for UCL Year2 2021-2022 COMP0016 Team-10: PRIDAR, which introduces the team project and contains all the portfolios.</span></p></div>
   <div class="margin_collapsetop"></div>
-  <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Get In Touch</span></h4><p style="line-height: normal;"><img style="margin:0px 15px 0px 0px;" src="images/Facebook.png" /><img style="margin:0px 15px 0px 0px;" src="images/Twitter.png" /><img style="margin:0px 15px 0px 0px;" src="images/LinkedIn.png" /></p></div>
+  <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Get In Touch</span></h4>
+    <p style="line-height: normal;"><img style="margin:0px 15px 0px 0px;" src="images/Facebook.png" />
+      <img style="margin:0px 15px 0px 0px;" src="images/Twitter.png" />
+      <img style="margin:0px 15px 0px 0px;" src="images/LinkedIn.png" /></p></div>
   <div class="margin_collapsetop"></div>
-  <div class="margin_collapsetop"></div>
+  <!-- <div class="margin_collapsetop"></div> -->
   </div>
   </div>
   <div class=" visible-sm-block d-sm-block visible-xs-block d-block" style="clear: both;width:0px;"></div>
@@ -1124,6 +1104,33 @@ Designed With TemplateToaster
   <div class="post_column col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 col-12">
     <div class="footercellcolumn4">
       <div class="margin_collapsetop"></div>
+      <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">        Link to project</span></h4>
+<div class="column">
+        <p><img class="footerIcons" src="images/home.png"><a href="home.html"> Airtable</a></p>
+        <p><img class="footerIcons" src="images/req.png"><a href="requirements.html"> Voiceflow</a></p>
+        <p><img class="footerIcons" src="images/hci.png"><a href="UI.html"> HCI</a></p>
+        <p><img class="footerIcons" src="images/req.png"><a href="research.html"> Github</a></p>
+        <p><img class="footerIcons" src="images/design.png"><a href="design.html"> Design</a></p>
+      </div>
+      </div>
+    </div>
+    </div>
+   <div class=" visible-md-block d-md-block visible-sm-block d-sm-block visible-xs-block d-block" style="clear: both;width:0px;"></div>
+  <div class="post_column col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 col-12">
+  <div class="footercellcolumn3">
+  <div class="margin_collapsetop"></div>
+  <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Project Supporters</span></h4>
+    <a href="https://www.nhs.uk/" target="_blank"><img class="ttr_uniform" src="images/footnhs.jpeg" width="100" /></a>
+    <a href="https://www.ucl.ac.uk/" target="_blank"><img class="ttr_uniform" src="images/ucl.jpg" width="130" /></a>
+<p style="line-height:1.65em;"><span style="font-size:0.933em;color:rgba(203,203,203,1);">A lot of thanks to our company partner </span></p><p style="line-height:1.65em;"><span style="font-size:0.933em;color:rgba(203,203,203,1);">NHS and Dr. Joseph Connor especially.</span></p>
+  </div>
+  <div class="margin_collapsetop"></div>
+  </div>
+  </div>
+
+  <div class="post_column col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 col-12">
+    <div class="footercellcolumn4">
+      <div class="margin_collapsetop"></div>
       <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">        Quick Links</span></h4>
         <div class="row">
           <div class="column">
@@ -1144,18 +1151,6 @@ Designed With TemplateToaster
         </div>
     </div>
     </div>
-   <div class=" visible-md-block d-md-block visible-sm-block d-sm-block visible-xs-block d-block" style="clear: both;width:0px;"></div>
-  <div class="post_column col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 col-12">
-  <div class="footercellcolumn3">
-  <div class="margin_collapsetop"></div>
-  <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Project Supporters</span></h4>
-    <a href="https://www.nhs.uk/" target="_blank"><img class="ttr_uniform" src="images/footnhs.jpeg" width="100" /></a>
-    <a href="https://www.ucl.ac.uk/" target="_blank"><img class="ttr_uniform" src="images/ucl.jpg" width="130" /></a>
-<p style="line-height:1.65em;"><span style="font-size:0.933em;color:rgba(203,203,203,1);">A lot of thanks to our company partner </span></p><p style="line-height:1.65em;"><span style="font-size:0.933em;color:rgba(203,203,203,1);">NHS and Dr. Joseph Connor especially.</span></p>
-  </div>
-  <div class="margin_collapsetop"></div>
-  </div>
-  </div>
   </div>
   <!-- <div class=" visible-lg-block d-xl-block d-lg-block visible-md-block d-md-block visible-sm-block d-sm-block visible-xs-block d-block" style="clear: both;width:0px;"></div> -->
   <!-- <div class="post_column col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12 col-12">
