--- a/research.html
+++ b/research.html
@@ -139,7 +139,7 @@ $(window).load(function() {
    <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
    <div class="ttr_Services_html_column00">
    <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-   <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Project Background</span></p>
+   <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Project Research</span></p>
       <p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
          <br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" />
          <span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);">We met our clients to clarify the project requirements and have a better understanding of the user's needs and concerns. After conducting our interviews, we were able to identify our clientrequirements for our chatbot.</span>   
@@ -170,7 +170,7 @@ $(window).load(function() {
       <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="ttr_Services_html_column00">
       <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-      <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Client Requirements</span></p>
+      <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Technical Research</span></p>
          <p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
             <br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" />
             <span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);">We met our clients to clarify the project requirements and have a better understanding of the user's needs and concerns. After conducting our interviews, we were able to identify our clientrequirements for our chatbot.</span>   
@@ -201,7 +201,7 @@ $(window).load(function() {
          <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
          <div class="ttr_Services_html_column00">
          <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-         <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Project Goal</span></p>
+         <div class="html_content"><p class="text" style="margin:0em 0em 0em 0em;text-align:Center;line-height:0.0704225352112676;font-size:1.143em;"><span style="font-family:'Roboto','Arial';font-size:2.5em;color:rgb(0, 132, 150);">Technical Decisions</span></p>
             <p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
                <br style="font-family:'Roboto','Arial';font-size:2.143em;color:rgba(52,52,52,1);" />
                <span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);">Our project is to develop a chatbot, i.e., AvaBot, that can run on web browser and other applications such as MS Teams.
