--- a/blog.html
+++ b/blog.html
@@ -365,6 +365,151 @@ height: auto;
 </style> -->
 
 
+<style>
+/* body {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  background: #eee;
+}
+
+body {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+} */
+
+.swiper-container-wrapper--timeline .swiper-slide {
+  display: flex;
+  background: #fff;
+  min-height: 300px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+}
+.swiper-container-wrapper--timeline .swiper-slide .container {
+  padding: 0;
+  width: 100%;
+}
+.swiper-container-wrapper--timeline .swiper-slide .title {
+  font-size: 18px;
+  opacity: 0;
+  transition: 0.5s ease 0.5s;
+}
+.swiper-container-wrapper--timeline .swiper-slide-active .title {
+  opacity: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar {
+  position: relative;
+  margin-bottom: 70px;
+  background-color: transparent;
+  height: 4px;
+  border-bottom: 1px solid #888;
+  width: 75%;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar-fill {
+  background-color: #000;
+  height: 3px;
+  top: 2px;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar:before {
+  position: absolute;
+  top: 2px;
+  left: -100%;
+  width: 100%;
+  height: 3px;
+  background-color: #000;
+  content: "";
+}
+.swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
+  position: absolute;
+  top: 3px;
+  right: -100%;
+  width: 100%;
+  height: 1px;
+  background-color: #888;
+  content: "";
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom {
+  position: relative;
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+  display: flex;
+  line-height: 1.66;
+  bottom: 0;
+  z-index: 11;
+  width: 75%;
+  display: flex;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title {
+  position: absolute;
+  font-weight: 400;
+  right: 0;
+  transform: translateX(50%);
+  transition: 0.2s all ease-in-out;
+  transition-delay: 0s;
+  cursor: pointer;
+  z-index: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title:after {
+  position: absolute;
+  top: calc(100% + 19px);
+  right: 50%;
+  transform: translateX(50%) translateY(-50%);
+  width: 12px;
+  height: 12px;
+  background: #000;
+  border-radius: 2rem;
+  content: "";
+  transition: 0.2s all ease-in-out;
+  transition-delay: 0s;
+  z-index: 1;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title {
+  font-weight: 400;
+  transition-delay: 0.4s;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title:after {
+  background: #000;
+  width: 25px;
+  height: 25px;
+  transition-delay: 0.4s;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title {
+  color: #888;
+  font-weight: 16px;
+}
+.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title:after {
+  background: #888;
+}
+</style>
+
+  <div class="row">
+    <div class="col-md-12">
+
+       <div class="tabbable-panel">
+          <div class="tabbable-line">
+             <ul class="nav nav-tabs ">
+                <li class="active">
+                   <a href="#tab_default_10" data-toggle="tab">Monthly Videos</a>
+                </li>
+                <li>
+                   <a href="#tab_default_20" data-toggle="tab">Weekly Blogs</a>
+                </li>
+             </ul>
+             <div class="tab-content">
+                <div class="tab-pane active" id="tab_default_10">
+
+
 <div class="ag-timeline-block">
   <div class="ag-timeline_title-box">
     <!-- <div class="ag-timeline_tagline">Timeline</div> -->
@@ -796,6 +941,44 @@ height: auto;
     </div>
   </section>
 </div>
+
+
+</div>
+<div class="tab-pane" id="tab_default_20">
+  <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
+    <!-- Timeline -->
+    <ul class="swiper-pagination-custom">
+      <li class='swiper-pagination-switch first active'><span class='switch-title'>1911</span></li>
+      <li class='swiper-pagination-switch'><span class='switch-title'>1970</span></li>
+      <li class='swiper-pagination-switch'><span class='switch-title'>2021</span></li>
+      <li class='swiper-pagination-switch last'><span class='switch-title'>3000</span></li>
+    </ul>
+    <!-- Progressbar -->
+    <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
+    <!-- Swiper -->
+    <div class="swiper swiper-container swiper-container--timeline">
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide"><span class="title">Swiper Timeline Progressbar</span></div>
+        <div class="swiper-slide"><span class="title">Title 2</span></div>
+        <div class="swiper-slide"><span class="title">Title 3</span></div>
+        <div class="swiper-slide"><span class="title">Title 4</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
+
+</div>
+</div>
+
+
+
+
+
 <script>
   (function ($) {
   $(function () {
@@ -870,158 +1053,10 @@ height: auto;
 })(jQuery);
 </script>
 
-<style>
-   /* html,
-body {
 
-}
-*/
-html,body {
-  /* position: relative;*/
-  height: 100%;
-  /* overflow: hidden; */ 
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-} 
-
-.swiper-container-wrapper--timeline .swiper-slide {
-  display: flex;
-  background: #fff;
-  min-height: 300px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-}
-.swiper-container-wrapper--timeline .swiper-slide .container {
-  padding: 0;
-  width: 100%;
-}
-.swiper-container-wrapper--timeline .swiper-slide .title {
-  font-size: 18px;
-  opacity: 0;
-  transition: 0.5s ease 0.5s;
-}
-.swiper-container-wrapper--timeline .swiper-slide-active .title {
-  opacity: 1;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-progressbar {
-  position: relative;
-  margin-bottom: 70px;
-  background-color: transparent;
-  height: 4px;
-  border-bottom: 1px solid #888;
-  width: 75%;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-progressbar-fill {
-  background-color: #000;
-  height: 3px;
-  top: 2px;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-progressbar:before {
-  position: absolute;
-  top: 2px;
-  left: -100%;
-  width: 100%;
-  height: 3px;
-  background-color: #000;
-  content: "";
-}
-.swiper-container-wrapper--timeline .swiper-pagination-progressbar:after {
-  position: absolute;
-  top: 3px;
-  right: -100%;
-  width: 100%;
-  height: 1px;
-  background-color: #888;
-  content: "";
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom {
-  position: relative;
-  list-style: none;
-  margin: 1rem 0;
-  padding: 0;
-  display: flex;
-  line-height: 1.66;
-  bottom: 0;
-  z-index: 11;
-  width: 75%;
-  display: flex;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch {
-  position: relative;
-  width: 100%;
-  height: 30px;
-  line-height: 30px;
-  display: block;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title {
-  position: absolute;
-  font-weight: 400;
-  right: 0;
-  transform: translateX(50%);
-  transition: 0.2s all ease-in-out;
-  transition-delay: 0s;
-  cursor: pointer;
-  z-index: 1;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch .switch-title:after {
-  position: absolute;
-  top: calc(100% + 19px);
-  right: 50%;
-  transform: translateX(50%) translateY(-50%);
-  width: 12px;
-  height: 12px;
-  background: #000;
-  border-radius: 2rem;
-  content: "";
-  transition: 0.2s all ease-in-out;
-  transition-delay: 0s;
-  z-index: 1;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title {
-  font-weight: 400;
-  transition-delay: 0.4s;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active .switch-title:after {
-  background: #000;
-  width: 25px;
-  height: 25px;
-  transition-delay: 0.4s;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title {
-  color: #888;
-  font-weight: 16px;
-}
-.swiper-container-wrapper--timeline .swiper-pagination-custom .swiper-pagination-switch.active ~ .swiper-pagination-switch .switch-title:after {
-  background: #888;
-}
-</style>
 <section>
 <div class="container">
-  <div class="swiper-container-wrapper swiper-container-wrapper--timeline">
-    <!-- Timeline -->
-    <ul class="swiper-pagination-custom">
-      <li class='swiper-pagination-switch first active'><span class='switch-title'>1911</span></li>
-      <li class='swiper-pagination-switch'><span class='switch-title'>1970</span></li>
-      <li class='swiper-pagination-switch'><span class='switch-title'>2021</span></li>
-      <li class='swiper-pagination-switch last'><span class='switch-title'>3000</span></li>
-    </ul>
-    <!-- Progressbar -->
-    <div class="swiper-pagination swiper-pagination-progressbar swiper-pagination-horizontal"></div>
-    <!-- Swiper -->
-    <div class="swiper swiper-container swiper-container--timeline">
-      <div class="swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide"><span class="title">Swiper Timeline Progressbar</span></div>
-        <div class="swiper-slide"><span class="title">Title 2</span></div>
-        <div class="swiper-slide"><span class="title">Title 3</span></div>
-        <div class="swiper-slide"><span class="title">Title 4</span></div>
-      </div>
-    </div>
-  </div>
+
 </div>
 
 </section>
