--- a/requirements.html
+++ b/requirements.html
@@ -16,7 +16,7 @@
 </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>
-Requirements
+   PRIDAR | Requirements
 </title>
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
@@ -130,6 +130,18 @@ $(window).load(function() {
 </div>
 </header>
 
+
+
+<style>
+   .ulhtml_content {
+      padding-left: 100px;
+   }
+   li { 
+      list-style-image: url(images/loader2.gif); 
+   } 
+
+</style>
+
 <div id="ttr_page" class="container">
    <div id="ttr_content_and_sidebar_container">
    <div id="ttr_content">
@@ -169,20 +181,20 @@ $(window).load(function() {
          
          </p></div>
       
-      <div class = "html_content"><p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
-         <ul >
-            <li><tab1><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Evaluate user systems against the PRIDAR methodology​</span></li></tab1>
-            <li><tab1><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Provide awareness and explain the PRIDAR requirements​</span></li></tab1>
-            <li><tab1><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Answer unprepared questions through a QA-like system</span> </li></tab1>
-         </ul>
-         </p></div>
+
       <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
       <div style="clear:both;"></div>
       </div>
       </div>
       <div class="clearfix visible-lg-block visible-sm-block visible-md-block visible-xs-block">
       </div>
-
+      <div class = "ulhtml_content"><p style="margin:0em 0em 0.48em 0em;text-align:Center;font-size:1.143em;">
+         <ul >
+            <li><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Evaluate user systems against the PRIDAR methodology​</span></li>
+            <li><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Provide awareness and explain the PRIDAR requirements​</span></li>
+            <li><span style="font-family:'Open Sans','Arial';font-size:1.5em;color:rgba(78,78,78,1);"> Answer unprepared questions through a QA-like system</span> </li>
+         </ul>
+         </p></div>
 
       <div id="ttr_page" class="container">
          <div id="ttr_content_and_sidebar_container">
