--- a/home.html
+++ b/home.html
@@ -1026,10 +1026,11 @@ button:hover {
   <div class="html_content"><h4 style="margin:16px 0px 0px 0px;line-height:2.02em;"><span style="font-weight:900;font-size:1.158em;color:rgba(243,243,243,1);">Site Info</span></h4>
     <p style="line-height:1.93em;"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);">This is the website for UCL Year2 2021-2022 COMP0016 Team-10: PRIDAR, which introduces the team project and contains all the portfolios.</span></p></div>
   
-  <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Get In Touch</span></h4>
+  <!-- <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">Get In Touch</span></h4>
     <p style="line-height: normal;"><img style="margin:0px 15px 0px 0px;" src="images/Facebook.png" />
       <img style="margin:0px 15px 0px 0px;" src="images/Twitter.png" />
-      <img style="margin:0px 15px 0px 0px;" src="images/LinkedIn.png" /></p></div>
+      <img style="margin:0px 15px 0px 0px;" src="images/LinkedIn.png" /></p>
+    </div> -->
   </div>
   </div>
 
@@ -1039,14 +1040,14 @@ button:hover {
         <p style="line-height:1.93em;"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);">Below are the links to the APIs used for our project:</span></p>
         <div class="row">
           <div class="column">
-        <p><img class="footerIcons" src="images/footerairtable.png"><a href="https://www.airtable.com/"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Airtable</span></a></p>
-        <p><img class="footerIcons" src="images/footerjf.png"><a href="https://www.jotform.com/"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Jotform</span></a></p>
-        <p><img class="footerIcons" src="images/footervf.png"><a href="https://www.voiceflow.com/"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Voiceflow</span></a></p>
+        <p><a href="https://www.airtable.com/" target="_blank"><img class="footerIcons" src="images/footerairtable.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Airtable</span></a></p>
+        <p><a href="https://www.jotform.com/"  target="_blank" ><img class="footerIcons" src="images/footerjf.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Jotform</span></a></p>
+        <p><a href="https://www.voiceflow.com/" target="_blank"><img class="footerIcons" src="images/footervf.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Voiceflow</span></a></p>
       </div>
         <div class="column">  
-        <p><img class="footerIcons" src="images/footersg.png"><a href="https://sendgrid.com/"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Sendgrid</span> </a></p>
-        <p><img class="footerIcons" src="images/footerqc.svg"><a href="https://quickchart.io/"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Quickchart</span></a></p>
-        <p><img class="footerIcons" src="images/footergithub.png"><a href="https://github.com/LintaRahman/PRIDARChatbot.git"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Github</span></a></p>
+        <p><a href="https://sendgrid.com/" target="_blank"><img class="footerIcons" src="images/footersg.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Sendgrid</span> </a></p>
+        <p><a href="https://quickchart.io/" target="_blank"><img class="footerIcons" src="images/footerqc.svg"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Quickchart</span></a></p>
+        <p><a href="https://github.com/LintaRahman/PRIDARChatbot.git"><img class="footerIcons" src="images/footergithub.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Github</span></a></p>
         </div>
       </div>
       </div>
@@ -1070,17 +1071,17 @@ button:hover {
       <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">        Quick Links</span></h4>
         <div class="row">
           <div class="column">
-        <p><img class="footerIcons" src="images/home.png"><a href="home.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Home</span> </a></p>
-        <p><img class="footerIcons" src="images/req.png"><a href="requirements.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Requirements</span> </a></p>
-        <p><img class="footerIcons" src="images/hci.png"><a href="UI.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> HCI</span></a></p>
-        <p><img class="footerIcons" src="images/req.png"><a href="research.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Research</span></a></p>
-        <p><img class="footerIcons" src="images/design.png"><a href="design.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Design</span></a></p>
+        <p><a href="home.html"><img class="footerIcons" src="images/home.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Home</span> </a></p>
+        <p><a href="requirements.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Requirements</span> </a></p>
+        <p><a href="UI.html"><img class="footerIcons" src="images/hci.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> HCI</span></a></p>
+        <p><a href="research.html"><img class="footerIcons" src="images/res.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Research</span></a></p>
+        <p><a href="design.html"><img class="footerIcons" src="images/design.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Design</span></a></p>
         </div>
         <div class="column">
-        <p><img class="footerIcons" src="images/impl.png"><a href="implementation.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Implementation</span></a></p>
-        <p><img class="footerIcons" src="images/req.png"><a href="home.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Testing</span> </a></p>
-        <p><img class="footerIcons" src="images/about.png"><a href="evaluation.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Evaluation</span></a></p>
-        <p><img class="footerIcons" src="images/blog.png"><a href="appendix.html"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Appendix</span></a></p>
+        <p><a href="implementation.html"><img class="footerIcons" src="images/impl.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Implementation</span></a></p>
+        <p><a href="home.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Testing</span> </a></p>
+        <p><a href="evaluation.html"><img class="footerIcons" src="images/about.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Evaluation</span></a></p>
+        <p><a href="appendix.html"><img class="footerIcons" src="images/blog.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Appendix</span></a></p>
       </div>
     </div>
         
