--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@ $(window).load(function() {
 </div>
 <div class="menu-center collapse navbar-collapse">
    <ul class="ttr_menu_items nav navbar-nav navbar-right">
-      <li class="ttr_menu_items_parent dropdown active"><a href="home.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon" ></span>Home</a>
+      <li class="ttr_menu_items_parent dropdown active"><a href="index.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon" ></span>Home</a>
         
         <hr class ="horiz_separator"/>
 
