--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@ $(window).load(function() {
 </div>
 <div class="menu-center collapse navbar-collapse">
    <ul class="ttr_menu_items nav navbar-nav navbar-right">
-      <li class="ttr_menu_items_parent dropdown active"><a href="home.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon" ></span>Home</a>
+      <li class="ttr_menu_items_parent dropdown active"><a href="index.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon" ></span>Home</a>
         
         <hr class ="horiz_separator"/>
 
@@ -661,7 +661,7 @@ $(window).load(function() {
       <div class="html_content"><h4 style="line-height: normal;"><span style="font-weight:900;color:rgba(243,243,243,1);">        Quick Links</span></h4>
         <div class="row">
           <div class="column">
-        <p><a href="home.html"><img class="footerIcons" src="images/home.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Home</span> </a></p>
+        <p><a href="index.html"><img class="footerIcons" src="images/home.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Home</span> </a></p>
         <p><a href="requirements.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Requirements</span> </a></p>
         <p><a href="UI.html"><img class="footerIcons" src="images/hci.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> HCI</span></a></p>
         <p><a href="research.html"><img class="footerIcons" src="images/res.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Research</span></a></p>
@@ -669,7 +669,7 @@ $(window).load(function() {
         </div>
         <div class="column">
         <p><a href="implementation.html"><img class="footerIcons" src="images/impl.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Implementation</span></a></p>
-        <p><a href="home.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Testing</span> </a></p>
+        <p><a href="index.html"><img class="footerIcons" src="images/req.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Testing</span> </a></p>
         <p><a href="evaluation.html"><img class="footerIcons" src="images/about.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Evaluation</span></a></p>
         <p><a href="appendix.html"><img class="footerIcons" src="images/blog.png"><span style="font-family:'Open Sans','Arial';font-size:1.071em;color:rgb(253, 252, 252);"> Appendix</span></a></p>
       </div>
