added menu dropdowns

--- a/MonthlyVideos.html
+++ b/MonthlyVideos.html
@@ -171,6 +171,8 @@ $(window).load(function() {
             <div class="ag-timeline-card_box">
               <div class="ag-timeline-card_meta-box">
                 <div class="ag-timeline-card_meta">January</div>
+                <div class="ag-timeline-card_desc">
+                    </div>
               </div>
               <div class="js-timeline-card_point-box ag-timeline-card_point-box">
                 <div class="ag-timeline-card_point">2022</div>
