--- a/implementation.html
+++ b/implementation.html
@@ -329,7 +329,7 @@ $(window).load(function() {
    </div>
    <div style="padding-right: 220px;padding-left: 250px; ">
       <div style="padding-top:50px; float:left; display:inline-block;vertical-align:top;">
-         <img src="images/qc.JPG" style="width:250px; height:auto" alt="img"></div>
+         <img src="images/Loginsys.png" style="width:250px; height:auto" alt="img"></div>
       <div style="padding-left:30px;padding-top: 50px; padding-bottom: 100px;" ><p style="padding-left:240px; ">
          <span style="font-family:'Roboto','Segoe UI';font-size:1.7em;color:rgba(78,78,78,1);">Quickchart is the API used to generate visualisations of user data </span></p>
       </div>
