--- a/WeeklyBlog.html
+++ b/WeeklyBlog.html
@@ -137,11 +137,11 @@ html{
   scroll-behavior: smooth;
 }
 body{
-  background: #b4f1e7;
+  background: #fff;
 }
 ::selection{
-  color: #fff;
-  background: #b4f1e7;
+  color: #b4f1e7;
+  background: #fff;
 }
 .wrapper{
   max-width: 1080px;
@@ -153,7 +153,7 @@ body{
   position: absolute;
   height: 100%;
   width: 4px;
-  background: #fff;
+  background: #b4f1e7;
   left: 50%;
   top: 20px;
   transform: translateX(-50%);
@@ -168,7 +168,7 @@ body{
   justify-content: flex-end;
 }
 .wrapper .row section{
-  background: #fff;
+  background: #b4f1e7;
   border-radius: 5px;
   width: calc(50% - 40px);
   padding: 20px;
@@ -179,7 +179,7 @@ body{
   content: "";
   height: 15px;
   width: 15px;
-  background: #fff;
+  background: #b4f1e7;
   top: 28px;
   z-index: -1;
   transform: rotate(45deg);
@@ -201,7 +201,7 @@ body{
   border-radius: 50%;
   color: #3ea0e2;
   font-size: 17px;
-  box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
+  box-shadow: 0 0 0 4px #b4f1e7, inset 0 2px 0 rgba(0,0,0,0.08), 0 3px 0 4px rgba(0,0,0,0.05);
 }
 .center-line .scroll-icon{
   bottom: 0px;
@@ -233,7 +233,7 @@ body{
 .row section .bottom a{
   text-decoration: none;
   background: #3ea0e2;
-  color: #fff;
+  color: #b4f1e7;
   padding: 7px 15px;
   border-radius: 5px;
   /* font-size: 17px; */
